--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#89C3F5</color>
     <color name="colorAccent">#FFFFFF</color>
     <color name="colorDark">#242424</color>
+    <color name="colorBlue">#2B62EC</color>
+    <color name="colorGray">#BDBDBD</color>
+    <color name="colorYellow">#F8FF00</color>
 </resources>
