--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,10 @@
         <item name="android:fontFamily">@font/opensans_bold</item>
     </style>
 
+    <style name="Splash" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
+
     <style name="WhiteBoldText" parent="TextAppearance.AppCompat">
         <item name="android:fontFamily">@font/opensans_bold</item>
         <item name="android:textSize">24sp</item>
