--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -12,11 +12,11 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_arrow"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="15dp"
+            android:layout_margin="15dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -29,7 +29,7 @@
             app:layout_constraintTop_toTopOf="parent"
             style="@style/WhiteBoldText"
             android:text="Capcay"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:textAlignment="center"
             />
 
